# base

./: .env  .env.example  .gitignore  .gitmodules  ARQUITETURA.md  ConstrSW Dev.postman_environment.json  ConstrSW.postman_collection.json  ConstrSW.postman_environment.json  DEVELOPMENT.md  ENDPOINTS.md  KeycloakRestAPI.postman_collection.json  KeycloakRestAPI.postman_environment.json  README.md  docker-compose.env  docker-compose.yml  e.yml  env.example  package-lock.json  package.json  postman-config.json  run_closed_cras.sh  sonar-project.properties
backend/oauth/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTACAO.md  README.md  TECHNICAL_SPEC.md  TEST_DOCUMENTATION.md  clippy.json  config.py  controller.py  coverage  dockerfile  eslint.config.mjs  exceptions.py  globals.py  go.mod  go.sum  keycloak_controller.py  lcov.info  main.py  models.py  openapi.yaml  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt  roles.txt  routes.txt  sonar-project.js  sonar-project.properties  test-report.out  to-do.md
backend/oauth/cmd/server/: main.go
backend/oauth/coverage/: lcov.info  tarpaulin-report.html
backend/oauth/docs/: docs.go
backend/oauth/internal/adapters/keycloak/: client.go
backend/oauth/internal/config/: config.go
backend/oauth/internal/http/handlers/: auth.go  roles.go  users.go  users_test.go
backend/oauth/internal/http/router/: router.go
backend/oauth/internal/ports/: auth.go  roles.go  users.go
backend/oauth/internal/services/: auth.go  roles.go  users.go
backend/oauth/models/: role.py
backend/oauth/oauth_api/: config.py  main.py
backend/oauth/oauth_api/adapters/api/: dependencies.py  error_handler.py
backend/oauth/oauth_api/adapters/keycloak/: keycloak_client.py  keycloak_role_repository.py  keycloak_user_repository.py
backend/oauth/oauth_api/core/: exceptions.py
backend/oauth/oauth_api/core/domain/: role.py  user.py
backend/oauth/oauth_api/core/ports/: role_repository.py  user_repository.py
backend/oauth/oauth_api/core/services/: role_service.py  user_service.py
backend/oauth/routers/: roles.py  users.py
backend/oauth/services/: keycloak_service.py  role_service.py
backend/oauth/src/: app.controller.ts  app.module.ts  bootstrap.spec.ts  bootstrap.ts  config.py  lib.rs  main.py  main.rs  main.spec.ts  main.ts
backend/oauth/src/adapters/: keycloak_adapter.rs  mod.rs
backend/oauth/src/adapters/api/: dependencies.py  error_handler.py
backend/oauth/src/adapters/keycloak/: keycloak_adapter.rs  keycloak_client.py  keycloak_role_repository.py  keycloak_user_repository.py
backend/oauth/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/oauth/src/auth/dto/: login-response.dto.ts  login.dto.ts
backend/oauth/src/common/decorators/: auth-token.decorator.ts
backend/oauth/src/common/errors/: custom-httpexception.ts
backend/oauth/src/common/filters/: all-exceptions.filter.ts  http-exception.filter.spec.ts  http-exception.filter.ts
backend/oauth/src/common/guards/: auth.guard.spec.ts  auth.guard.ts
backend/oauth/src/controllers/: general_controller.rs  mod.rs
backend/oauth/src/core/: error.rs  mod.rs
backend/oauth/src/core/domain/: role.py  user.py
backend/oauth/src/core/interfaces/: auth_provider.rs  mod.rs  role_provider.rs  user_provider.rs
backend/oauth/src/core/ports/: role_repository.py  user_repository.py
backend/oauth/src/core/services/: general_service.rs  mod.rs  role_service.py  role_service.rs  user_service.py  user_service.rs
backend/oauth/src/core/validators/: create_role_validator.rs  create_user_validator.rs  login_validator.rs  mod.rs  patch_role_validator.rs  update_password_validator.rs  update_role_validator.rs  update_user_validator.rs
backend/oauth/src/dtos/req/: create_role_req.rs  create_user_req.rs  login_req.rs  mod.rs
backend/oauth/src/dtos/res/: create_user_res.rs  get_all_roles_res.rs  get_all_users_res.rs  get_role_res.rs  get_user_res.rs  login_res.rs  mod.rs
backend/oauth/src/interfaces/: auth_provider.rs
backend/oauth/src/keycloak/: keycloak.config.ts  keycloak.module.ts
backend/oauth/src/keycloak/adapter/: keycloak.adapter.interface.ts  keycloak.adapter.spec.ts  keycloak.adapter.ts
backend/oauth/src/main/resources/: application.properties
backend/oauth/src/roles/: README.md  roles.controller.spec.ts  roles.controller.ts  roles.module.ts  roles.service.spec.ts  roles.service.ts
backend/oauth/src/roles/dto/: create-role.dto.ts  role.dto.ts
backend/oauth/src/roles/dtos/: create-role.dto.ts
backend/oauth/src/services/: general_service.rs  mod.rs
backend/oauth/src/users/: users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.spec.ts  users.service.ts
backend/oauth/src/users/dto/: create-user.dto.ts  update-password.dto.ts  user.dto.ts
backend/oauth/src/users/dtos/: create-user.dto.ts  index.ts  login.dto.ts  patch-password.dto.ts  update-user.dto.ts
backend/oauth/src/validators/: login_validator.rs  mod.rs
backend/oauth/test/: app.e2e-spec.ts  roles.service.spec.ts  users.service.spec.ts
backend/oauth/tests/: auth_test.go  conftest.py  create_role_endpoint_tests.rs  create_user_endpoint_tests.rs  delete_user_endpoint_tests.rs  get_all_roles_endpoint_tests.rs  get_role_endpoint_tests.rs  get_user_endpoint_tests.rs  get_users_endpoint_tests.rs  handlers_roles_test.go  login_endpoint_tests.rs  patch_user_password_endpoint_tests.rs  router_test.go  services_roles_test.go  test-report.out  test_core_and_main.py  test_roles.py  test_roles_integration.py  test_suite_adapters.py  test_suite_core.py  test_suite_main.py  test_users.py  test_users_integration.py  update_user_endpoint_tests.rs  users_test.go
backend/oauth/tests/adapters/: test_dependencies.py  test_keycloak.py  test_routes.py  test_schemas.py
backend/oauth/tests/adapters/api/: test_roles_api.py  test_users_api.py
backend/oauth/tests/core/service/: test_role_service.py  test_user_service.py
backend/professors/core_api/: pyproject.toml
frontend/: .env  (+13 more)
(+278 files in other folders)
