[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
utoipa = "5.4.0" 
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

[lib]
path = "src/lib.rs"

[[test]]
name = "login_unit_test"
path = "tests/unit/general/login_unit_test.rs"

[[test]]
name = "user_service_unit_test"
path = "tests/unit/user/user_service_unit_test.rs"

[[test]]
name = "role_service_unit_test"
path = "tests/unit/role/role_service_unit_test.rs"

[[test]]
name = "general_integration_test"
path = "tests/integration/general/general_integration_test.rs"

[dev-dependencies]
wiremock = "=0.5.22"
actix-rt = "2"