[tool.poetry]
name = "core-api"
version = "0.1.0"
description = "Core API para funcionalidades de professores."
authors = ["AndreiRech <andreirech22@outlook.com>", "eduardo-de-bastiani <eduardocolladebastiani@gmail.com>", "erikvsuris <erikvsuris@gmail.com>", "shimpas-ville <cadu2001moraes@gmail.com>"]
readme = "README.md"
packages = [{include = "core_api"}]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.2"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = {extras = ["email"], version = "^2.11.9"}
pydantic-settings = "^2.10.1"
httpx = "^0.28.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cachetools = "^6.2.0"
alembic = "^1.16.5"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.13.0"
black = "^25.1.0"
mypy = "^1.18.1"
pre-commit = "^4.3.0"
respx = "^0.22.0"
taskipy = "^1.14.1"
pysonar = "^1.2.0.2419"
pytest-asyncio = "^1.2.0"
bandit = "^1.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

